# backend/internal/interface/api/handler/user_handler.go
@@ -93,3 +93,30 @@ func (h *UserHandler) GetByIDFromContext(ctx *gin.Context) {
 
 	ctx.JSON(http.StatusOK, res)
 }
+
+// Signup godoc
+//
+//	@Summary	Signup User
+//	@Schemes
+//	@Description	Create User
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			body	body		model.CreateUserParam	true	"リクエスト"
+//	@Success		200		{object}	model.User				"OK"
+//	@Router			/api/signup [post]
+func (h *UserHandler) Signup(ctx *gin.Context) {
+	body := model.CreateUserParam{}
+	if ctx.ShouldBindJSON(&body) != nil {
+		ctx.Error(exception.InvalidRequestError)
+		return
+	}
+
+	res, err := h.u.Create(ctx, body)
+	if err != nil {
+		ctx.Error(err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, res)
+}
